# optimus-blockchain

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  blockchain.cpp  hash_gen_test.cpp
includes/: block.h  blockchain.h  nodes.h
protos/: transaction.proto
src/: block.cpp  blockchain.cpp  hash_gen_test.cpp  main.cpp  nodes.cpp  server_test.cpp  utils.cpp
test/: hash_gen_test.cpp  test_block.cpp
